update css to adjust padding for long titles

--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -50,7 +50,7 @@
     width: 100%;
 
     @media #{core.$screen-md-up} {
-      padding: core.$space core.$space-xxxxl core.$space core.$space-m;
+      padding: core.$space core.$space-ul core.$space core.$space-m;
     }
 
     // Closed state.
