--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -428,7 +428,7 @@
         </div>
       </div>
       <div class="uq-accordion__item">
-        <button class="uq-accordion__toggle" aria-controls="content-3" aria-expanded="false" id="accordion-title-3">And me!</button>
+        <button class="uq-accordion__toggle" aria-controls="content-3" aria-expanded="false" id="accordion-title-3">This is an exceptionally long accordion title that is so exceptionally long it wraps to another line to test how wrapping displays in the accordion title</button>
         <div class="uq-accordion__content" role="region" aria-hidden="true" id="content-3" aria-labelledby="accordion-title-3">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor eros dui, vitae iaculis leo ornare eget. Etiam tristique lobortis ligula non mattis. Ut dapibus libero neque, vel tincidunt nunc tempus eget.</p>
           <p>Maecenas faucibus mollis interdum. Etiam porta sem malesuada magna mollis euismod. Maecenas sed diam eget risus varius blandit sit amet non magna. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis risus eget urna mollis ornare vel eu leo. Donec sed odio dui.</p>
