--- a/packages/pane/src/scss/_component.scss
+++ b/packages/pane/src/scss/_component.scss
@@ -83,6 +83,10 @@
 
 // Pane grid
 .uq-pane-grid {
+  &.uq-grid {
+    grid-gap: 0;
+  }
+
   &--shaded {
     .uq-pane {
       @include pane-shaded;
@@ -125,19 +129,6 @@
     .uq-pane__footer {
       background-color: core.$uq-black;
       background-color: rgba(core.$uq-black, .3);
-    }
-  }
-}
-
-// Fix for 3 column layout with more than 3 panes at medium breakpoint going
-// out of alignment due to .row's
-.uq-pane-grid-wrapper {
-  .row {
-    &::before,
-    &::after {
-      @media #{core.$screen-md-up}{
-        clear: left;
-      }
     }
   }
 }
