update font-size variable and change behaviour docs to separate section with variant

--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -38,7 +38,7 @@
     cursor: pointer;
     display: inline-block;
     font-family: core.$font-body;
-    font-size: 1.25rem;
+    font-size: core.$font-size-l;
     font-weight: 400;
     line-height: core.$line-height-h;
     margin: core.$space-none;
