--- a/packages/storybook-html/src/components/sections/sections-large-padding.html
+++ b/packages/storybook-html/src/components/sections/sections-large-padding.html
@@ -1,4 +1,4 @@
-<div class="uq-section uq-section--large-top-padding uq-section--large-bottom-padding">
+<section class="uq-section uq-section--large-top-padding uq-section--large-bottom-padding">
   <div class="uq-section__container">
     <div class="uq-section__header">
       <h2 class="uq-section__title">Section with large padding</h2>
@@ -13,4 +13,4 @@
         takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
   </div>
-</div>
+</section>
