--- a/packages/storybook-html/src/components/sections/sections-shaded.html
+++ b/packages/storybook-html/src/components/sections/sections-shaded.html
@@ -1,4 +1,4 @@
-<div class="uq-section uq-section--shaded">
+<section class="uq-section uq-section--shaded">
   <div class="uq-section__container">
     <div class="uq-section__header">
       <h2 class="uq-section__title">Section title</h2>
@@ -13,4 +13,4 @@
         takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
   </div>
-</div>
+</section>
