--- a/packages/storybook-html/src/components/sections/sections-narrow.html
+++ b/packages/storybook-html/src/components/sections/sections-narrow.html
@@ -1,4 +1,4 @@
-<section class="uq-section uq-section--narrow">
+<section class="uq-section uq-section--narrow" aria-label="section title">
   <div class="uq-section__container">
     <div class="uq-section__header">
       <h2 class="uq-section__title">Section title</h2>
