--- a/packages/storybook-html/src/components/sections/sections-no-padding.html
+++ b/packages/storybook-html/src/components/sections/sections-no-padding.html
@@ -1,7 +1,7 @@
 <section class="uq-section uq-section--no-top-padding uq-section--no-bottom-padding" aria-label="section title">
   <div class="uq-section__container">
     <div class="uq-section__header">
-      <h2 class="uq-section__title">Section with no padding</h2>
+      <h2 class="uq-section__title">Section title</h2>
     </div>
 
     <div class="uq-section__content">
