--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -319,23 +319,37 @@ $use-encapsulation: false !default;
 
 // Print styles
 @media print {
+  // Print utilities
+  .show-for-print {
+    display: block !important;
+  }
+
+  .hide-for-print {
+    display: none !important;
+  }
+
+  // Type styles
+  p {
+    font-size: core.$font-size-s !important;
+  }
+
   // Header
   .uq-header {
     background: none !important;
 
-    &__logo img {
-      display: block;
-      content: url(https://static.uq.net.au/v11/logos/corporate/uq-logo.png) !important;
+    &__logo {
+      &:after {
+        content: url(https://static.uq.net.au/v11/logos/corporate/uq-logo.png);
+      }
+
+      img {
+        display: none !important;
+      }
     }
 
     &__search-toggle,
     &__navigation {
       display: none !important;
-    }
-
-    a:after {
-      content: " (" attr(href) ")";
-      font-size: 12px;
     }
   }
 
@@ -361,34 +375,13 @@ $use-encapsulation: false !default;
     max-width: 100% !important;
   }
 
-  .uq-accordion {
-    &__content--active {
-      height: 100% !important;
-    }
-  }
-
-  .uq-card {
-    &__image__wrapper {
-      display: none !important;
-    }
-
-    a:after {
-      content: " (" attr(href) ")";
-      font-size: 12px;
-    }
-  }
-
-  // Components to hide
-  .uq-alert,
-  .uq-hero {
-    display: none !important;
-  }
-
   // Footer
   .uq-footer {
     color: core.$text !important;
+    background: none !important;
 
-    a {
+    a,
+    .uq-footer__sub-title {
       color: core.$text !important;
     }
 
