--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -282,16 +282,16 @@
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
     <nav aria-label="uq-breadcrumb">
-      <ol class="uq-breadcrumb" itemscope="" itemtype="http://schema.org/BreadcrumbList">
-        <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+      <ol class="uq-breadcrumb" itemscope="" itemtype="https://schema.org/BreadcrumbList">
+        <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
           <a class="uq-breadcrumb__link uq-breadcrumb__link--home" href="/">Home</a>
           <meta itemprop="position" content="1">
         </li>
-        <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+        <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
           <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services">Information and services</a>
           <meta itemprop="position" content="2">
         </li>
-        <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
+        <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
           <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services/human-resources">Human resources</a>
           <meta itemprop="position" content="3">
         </li>
