--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -339,7 +339,9 @@ $use-encapsulation: false !default;
 
     &__logo {
       &:after {
-        content: url(https://static.uq.net.au/v11/logos/corporate/uq-logo.png);
+        width: 160px;
+        height: 42px;
+        content: url(https://static.uq.net.au/v13/logos/corporate/uq-logo.png);
       }
 
       img {
