hide footer emergency and footer links

--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -396,7 +396,9 @@ $use-encapsulation: false !default;
       padding-bottom: 0 !important;
     }
 
-    &__login-link {
+    &__emergency-contact,
+    &__login-link,
+    &__footer {
       display: none !important;
     }
   }
