added missing responsive point rule

--- a/packages/hero/src/scss/_component.scss
+++ b/packages/hero/src/scss/_component.scss
@@ -127,8 +127,10 @@
   &--tall {
 
     & .uq-hero__content {
-      padding-top: 11rem;
-      padding-bottom: 11rem;
+      @media #{core.$screen-md-up} {
+        padding-top: 11rem;
+        padding-bottom: 11rem;
+      }
     }
 
   }
