--- a/packages/storybook-html/src/components/hero/hero.html
+++ b/packages/storybook-html/src/components/hero/hero.html
@@ -1,4 +1,4 @@
-<!-- Page header (default) -->
+<!-- Hero (default) -->
 
 <div class="uq-hero">  
   <div class="uq-hero__content">
@@ -8,7 +8,7 @@
   </div>
 </div>
 <br>
-<!-- Page header (with really long title) -->
+<!-- Hero (with really long title) -->
 <div class="uq-hero">  
   <div class="uq-hero__content">
     <div class="uq-hero__text">
@@ -17,8 +17,26 @@
   </div>
 </div>
 <br>
-<!-- Page header (with image) -->
+<!-- Hero with feature image -->
 <div class="uq-hero uq-hero--feature-image">  
+  <div class="uq-hero__image">
+    <div class="uq-hero__image--small">
+      <img src="/images/hero/hero-example--small.jpg" />
+    </div>
+    <div class="uq-hero__image--large">
+      <img src="/images/hero/hero-example--large.jpg" />
+    </div>
+  </div>
+  <div class="uq-hero__content">
+    <div class="uq-hero__text">
+      <h1>Start postgraduate study online</h1>
+      <p class="uq-hero__subtext">Apply by June 30</p>
+      <p><a class="uq-button" href="#">Learn more</a></p>
+    </div>
+  </div>
+</div>
+<!-- Large hero with image -->
+<div class="uq-hero uq-hero--feature-image uq-hero--large">  
   <div class="uq-hero__image">
     <div class="uq-hero__image--small">
       <img src="/images/hero/hero-example--small.jpg" />
