--- a/packages/hero/src/scss/_component.scss
+++ b/packages/hero/src/scss/_component.scss
@@ -25,8 +25,12 @@
 
   &__text {
     
-    & h1 {
+    & h1,
+    & .uq-hero__title {
+
       color: inherit;
+      font-family: core.$montserrat;
+      font-size: 2.5rem;
       margin-top: 0;
       margin-bottom: core.$space-s;
 
