--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -221,6 +221,10 @@
   
           .uq-site-header__navigation__sub-toggle {
             background-image: url(icon-constants.get-icon('standard--arrow-up-1', core.$uq-purple));
+
+            @media #{core.$screen-lg-up} {
+              background-image: url(icon-constants.get-icon('standard--arrow-down-1', core.$uq-purple));
+            }
           }
         }
 
@@ -228,10 +232,6 @@
           > a {
             @media #{core.$screen-lg-up} {
               padding-right: core.$space-xl;
-              background-image: url(icon-constants.get-icon('standard--arrow-down-1', core.$uq-purple));
-              background-size: 1rem;
-              background-position: right 1rem center;
-              background-repeat: no-repeat;
             }
           }
         }
@@ -255,21 +255,29 @@
       right: 0;
       display: block;
       width: 3rem;
-      padding: core.$space core.$space-m;
+      padding: 1.275rem core.$space-m;
+      border: 0;
       border-left: 1px solid $nav-dropdown-divider;
       text-indent: -100vw;
       background-image: url(icon-constants.get-icon('standard--arrow-down-1', core.$uq-purple));
       background-size: 1rem;
       background-position: center center;
       background-repeat: no-repeat;
+      background-color: transparent;
       overflow: hidden;
 
       @media #{core.$screen-md-up} {
-        width: 3.5rem;
+        width: core.$space-l;
+        padding: 1.275rem core.$space-m 1.275rem core.$space;
       }
   
       @media #{core.$screen-lg-up} {
-        display: none;
+        border-left: 0;
+
+        &:focus {
+          outline: 0 none;
+          background-color: $nav-primary-active-bg;
+        }
       }
     }
 
