add pointer cursor to sub-nav toggle, add aria pressed attribute and update js to toggle

--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -265,6 +265,7 @@
       background-repeat: no-repeat;
       background-color: transparent;
       overflow: hidden;
+      cursor: pointer;
 
       @media #{core.$screen-md-up} {
         width: core.$space-l;
