update examples and docs

--- a/packages/storybook-html/src/components/site-header/site-header-with-subnav.html
+++ b/packages/storybook-html/src/components/site-header/site-header-with-subnav.html
@@ -1,5 +1,4 @@
 <div class="uq-site-header">
-
   <!-- Site title and utility area with mobile nav toggler (JS) -->
   <div class="uq-site-header__title-container">
     <div class="uq-site-header__title-container__left">
@@ -11,18 +10,15 @@
     </div>
   </div>
 
-  <!-- Navigation Menu  -->
+  <!-- Navigation menu  -->
   <div class="uq-site-header__navigation-container">
     <nav class="uq-site-header__navigation" aria-label="Site navigation" id="jsNav">
-      <ul class="uq-site-header__navigation__list
-                 uq-site-header__navigation__list--level-1">
-        <li class="uq-site-header__navigation__list-item
-                   uq-site-header__navigation__list-item--has-subnav
-                   uq-site-header__navigation__list-item--active">
+      <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-1">
+        <li class="uq-site-header__navigation__list-item uq-site-header__navigation__list-item--has-subnav uq-site-header__navigation__list-item--active">
           <a href="https://future-students.uq.edu.au/study" aria-haspopup="true" aria-expanded="false">Study</a>
-          <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Study sub-menu</span></button>
+          <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Study sub-navigation</span></button>
           <ul class="uq-site-header__navigation__list
-                     uq-site-header__navigation__list--level-2" aria-label="Study submenu">
+                     uq-site-header__navigation__list--level-2" aria-label="Study sub-navigation">
             <li class="uq-site-header__navigation__list-item">
               <a href="https://future-students.uq.edu.au/study/programs">Find a program</a>
             </li>
@@ -65,9 +61,9 @@
         <li class="uq-site-header__navigation__list-item
                    uq-site-header__navigation__list-item--has-subnav">
           <a href="https://future-students.uq.edu.au/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
-          <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Admissions sub-menu</span></button>
+          <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Admissions sub-navigation</span></button>
           <ul class="uq-site-header__navigation__list 
-                     uq-site-header__navigation__list--level-2" aria-label="Admissions submenu">
+                     uq-site-header__navigation__list--level-2" aria-label="Admissions sub-navigation">
             <li class="uq-site-header__navigation__list-item">
               <a href="https://future-students.uq.edu.au/admissions/undergraduate">Undergraduate</a>
             </li>
@@ -97,9 +93,9 @@
         <li class="uq-site-header__navigation__list-item
                    uq-site-header__navigation__list-item--has-subnav">
           <a href="https://future-students.uq.edu.au/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
-          <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show University life sub-menu</span></button>
+          <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show University life sub-navigation</span></button>
           <ul class="uq-site-header__navigation__list 
-                     uq-site-header__navigation__list--level-2" aria-label="University life submenu">
+                     uq-site-header__navigation__list--level-2" aria-label="University life sub-navigation">
             <li class="uq-site-header__navigation__list-item">
               <a href="https://future-students.uq.edu.au/university-life/living-in-brisbane">Living in Brisbane</a>
             </li>
@@ -127,4 +123,3 @@
     </nav>
   </div>
 </div>
-
