update docs and refs from other files

--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -46,12 +46,12 @@
   </div>
 </header>
 
+<!-- Site header -->
 <div class="uq-site-header">
-
   <!-- Site title and utility area with mobile nav toggler (JS) -->
   <div class="uq-site-header__title-container">
     <div class="uq-site-header__title-container__left">
-      <a href="https://future-students.uq.edu.au/" class="uq-site-header__title">Site title</a>
+      <a href="/" class="uq-site-header__title">Site title</a>
     </div>
     <div class="uq-site-header__title-container__right">
       <div>[Site utilities go here]</div>
@@ -59,7 +59,7 @@
     </div>
   </div>
 
-  <!-- Navigation Menu  -->
+  <!-- Navigation menu  -->
   <div class="uq-site-header__navigation-container">
     <nav class="uq-site-header__navigation" aria-label="Site navigation" id="jsNav">
       <ul class="uq-site-header__navigation__list
