--- a/packages/storybook-html/src/components/site-header/site-header-with-subnav.html
+++ b/packages/storybook-html/src/components/site-header/site-header-with-subnav.html
@@ -2,7 +2,7 @@
   <!-- Site title and utility area with mobile nav toggler (JS) -->
   <div class="uq-site-header__title-container">
     <div class="uq-site-header__title-container__left">
-      <a href="https://future-students.uq.edu.au/" class="uq-site-header__title">Site title</a>
+      <a href="/" class="uq-site-header__title">Site title</a>
     </div>
     <div class="uq-site-header__title-container__right">
       <div>[Site utilities go here]</div>
@@ -17,8 +17,7 @@
         <li class="uq-site-header__navigation__list-item uq-site-header__navigation__list-item--has-subnav uq-site-header__navigation__list-item--active">
           <a href="https://future-students.uq.edu.au/study" aria-haspopup="true" aria-expanded="false">Study</a>
           <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Study sub-navigation</span></button>
-          <ul class="uq-site-header__navigation__list
-                     uq-site-header__navigation__list--level-2" aria-label="Study sub-navigation">
+          <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-2" aria-label="Study sub-navigation">
             <li class="uq-site-header__navigation__list-item">
               <a href="https://future-students.uq.edu.au/study/programs">Find a program</a>
             </li>
@@ -58,12 +57,10 @@
             </li>
           </ul>
         </li>
-        <li class="uq-site-header__navigation__list-item
-                   uq-site-header__navigation__list-item--has-subnav">
+        <li class="uq-site-header__navigation__list-item uq-site-header__navigation__list-item--has-subnav">
           <a href="https://future-students.uq.edu.au/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
           <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Admissions sub-navigation</span></button>
-          <ul class="uq-site-header__navigation__list 
-                     uq-site-header__navigation__list--level-2" aria-label="Admissions sub-navigation">
+          <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-2" aria-label="Admissions sub-navigation">
             <li class="uq-site-header__navigation__list-item">
               <a href="https://future-students.uq.edu.au/admissions/undergraduate">Undergraduate</a>
             </li>
@@ -90,12 +87,10 @@
             </li>
           </ul>
         </li>
-        <li class="uq-site-header__navigation__list-item
-                   uq-site-header__navigation__list-item--has-subnav">
+        <li class="uq-site-header__navigation__list-item uq-site-header__navigation__list-item--has-subnav">
           <a href="https://future-students.uq.edu.au/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
           <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show University life sub-navigation</span></button>
-          <ul class="uq-site-header__navigation__list 
-                     uq-site-header__navigation__list--level-2" aria-label="University life sub-navigation">
+          <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-2" aria-label="University life sub-navigation">
             <li class="uq-site-header__navigation__list-item">
               <a href="https://future-students.uq.edu.au/university-life/living-in-brisbane">Living in Brisbane</a>
             </li>
