add accessibility docs

--- a/packages/storybook-html/src/components/site-header/site-header-without-subnav.html
+++ b/packages/storybook-html/src/components/site-header/site-header-without-subnav.html
@@ -11,7 +11,7 @@
 
   <!-- Navigation menu  -->
   <div class="uq-site-header__navigation-container">
-    <nav class="uq-site-header__navigation" id="jsNav">
+    <nav class="uq-site-header__navigation" aria-label="Site navigation"  id="jsNav">
       <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-1">
         <li class="uq-site-header__navigation__list-item">
           <a href="/">Home</a>
