--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -1,4 +1,5 @@
 @use '@uqds/core/src/scss/global' as core;
+@use '@uqds/icon/src/scss/global' as icon;
 @use 'global' as *;
 @use 'icons' as *;
 
@@ -441,13 +442,13 @@ $use-encapsulation: false !default;
       background-position: center;
       background-repeat: no-repeat;
       background-size: contain;
-      height: core.$space;
+      height: core.$space-compressed-xl;
       left: core.$space;
       margin-right: core.$space-s;
-      margin-top: calc(#{-(core.$space) / 2} - 1px);
+      margin-top: calc(#{-(core.$space-compressed-xl) / 2} - 1px);
       position: absolute;
       top: 50%;
-      width: core.$space;
+      width: core.$space-compressed-xl;
     }
   }
 
@@ -455,7 +456,7 @@ $use-encapsulation: false !default;
     background-color: $form-color-error;
 
     &::before {
-      background-image: url(get-icon('form-error', core.$uq-white));
+      background-image: url(icon.get-icon('standard--alert-triangle', core.$uq-white));
     }
   }
 
@@ -463,7 +464,7 @@ $use-encapsulation: false !default;
     background-color: $form-color-success;
 
     &::before {
-      background-image: url(get-icon('form-success', core.$uq-white));
+      background-image: url(icon.get-icon('standard--success-circle', core.$uq-white));
     }
   }
 
