--- a/packages/storybook-html/src/components/blockquote/blockquote.html
+++ b/packages/storybook-html/src/components/blockquote/blockquote.html
@@ -1,8 +1,8 @@
-<blockquote class="blockquote blockquote--light">
-    <div class="blockquote__body">
-        <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
-    </div>
-    <div class="blockquote__footer">
-        <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
-    </div>
-</blockquote>
+<figure class="blockquote">
+    <blockquote class="blockquote__body" cite="https://www.huxley.net/bnw/four.html">
+        <p>Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re pierced.</p>
+    </blockquote>
+    <figcaption class="blockquote__footer">
+        —Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite>
+    </figcaption>
+</figure>
