add light variant, update docs, and status badge

--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -20,8 +20,7 @@
 		width: core.$space-xs;
 	}
 
-	&--dark {
-		background-color: core.$uq-purple;
+	&--light {
 		color: core.$uq-white;
 
 		&::before {
