--- a/packages/storybook-html/src/components/blockquote/blockquote-light.html
+++ b/packages/storybook-html/src/components/blockquote/blockquote-light.html
@@ -1,4 +1,4 @@
-<figure class="blockquote">
+<figure class="blockquote blockquote--light">
     <blockquote class="blockquote__body">
         <p>Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re pierced.</p>
     </blockquote>
