--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -329,7 +329,6 @@
       <li>Unordered list item</li>
       <li>Unordered list item</li>
     </ul>
-    <blockquote>Blockquote, Fusce vitae tortor consequat, consectetur metus id, ultricies risus. Nulla pharetra ornare sem, at placerat nisi sollicitudin bibendum. Nulla in pulvinar augue. Etiam tincidunt leo egestas congue congue. Phasellus feugiat mattis finibus. Duis bibendum pharetra risus, non aliquet augue consequat sit amet. Vestibulum sit amet enim fermentum, fringilla massa nec, facilisis augue.</blockquote>
     <hr>
   </div>
 </div>
@@ -384,27 +383,15 @@
 <!-- blockquote -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
-    <h2>Blockquotes</h2>
-    <section class="background-light">
-        <blockquote class="blockquote blockquote--dark blockquote--boxed">
-            <div class="blockquote__body">
-                <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
-            </div>
-            <div class="blockquote__footer">
-                <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
-            </div>
-        </blockquote>
-    </section>
-    <section class="background-light">
-        <blockquote class="blockquote blockquote--light blockquote--quotemark">
-            <div class="blockquote__body">
-                <p>Words can be like X-rays, if you use them properly — they’ll go through anything. You read and you’re pierced.</p>
-            </div>
-            <div class="blockquote__footer">
-                <p>Aldous Huxley, <cite><a href="#" class="blockquote__link">Brave New World</a></cite></p>
-            </div>
-        </blockquote>
-    </section>
+    <h2>Blockquote</h2>
+    <figure class="blockquote">
+      <blockquote class="blockquote__body">
+          <p>Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re pierced.</p>
+      </blockquote>
+      <figcaption class="blockquote__footer">
+          —Aldous Huxley, <cite><a href="https://www.huxley.net/bnw/four.html" class="blockquote__link">Brave New World</a></cite>
+      </figcaption>
+    </figure>
   </div>
 </div>
 <br/>
