--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -259,25 +259,14 @@
 <br/>
 
 <!-- hero -->
-<div class="uq-hero uq-hero--feature-image">  
-  <div class="uq-hero__image">
-    <div class="uq-hero__image--small">
-      <img src="/images/hero/hero-example--small.jpg" />
-    </div>
-    <div class="uq-hero__image--large">
-      <img src="/images/hero/hero-example--large.jpg" />
-    </div>
-  </div>
+<div class="uq-hero">  
   <div class="uq-hero__content">
     <div class="uq-hero__text">
-      <h1>Hero banner with feature image</h1>
-      <p class="uq-hero__subtext">Banner sub text</p>
-      <p><a class="uq-button" href="#">Call to action</a></p>
+      <h1 class="uq-hero__title">Kitchen sink</h1>
     </div>
   </div>
 </div>
-<br/>
-
+<br>
 <!-- breadcrumb -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
