--- a/packages/storybook-html/src/components/hero/hero.html
+++ b/packages/storybook-html/src/components/hero/hero.html
@@ -21,10 +21,10 @@
 <div class="uq-hero uq-hero--feature-image">  
   <div class="uq-hero__image">
     <div class="uq-hero__image--small">
-      <img src="/images/hero/hero-example--small.jpg" />
+      <img src="/images/hero/hero-example--small.jpg" alt="" role="presentation" />
     </div>
     <div class="uq-hero__image--large">
-      <img src="/images/hero/hero-example--large.jpg" />
+      <img src="/images/hero/hero-example--large.jpg" alt="" role="presentation" />
     </div>
   </div>
   <div class="uq-hero__content">
@@ -39,10 +39,10 @@
 <div class="uq-hero uq-hero--feature-image uq-hero--large">  
   <div class="uq-hero__image">
     <div class="uq-hero__image--small">
-      <img src="/images/hero/hero-example--small.jpg" />
+      <img src="/images/hero/hero-example--small.jpg" alt="" role="presentation" />
     </div>
     <div class="uq-hero__image--large">
-      <img src="/images/hero/hero-example--large.jpg" />
+      <img src="/images/hero/hero-example--large.jpg" alt="" role="presentation" />
     </div>
   </div>
   <div class="uq-hero__content">
